--- a/templates/base.html
+++ b/templates/base.html
@@ -27,14 +27,12 @@
     <!-- sidebar Start from here-->
   {% include 'sidebar.html' %}
 
-    {% comment %}<!-- sidebar Start from here-->
-    *-*--***-*-*-*-*-*-*-*-*-*-***-*-*-*-*-*-*-*-*-*- {% endcomment %}
+    <!-- sidebar Start from here-->
 
     <!-- Start main-panel -->
     <div class="main-panel ps ps--active-y">
       <!-- Navbar -->
       {% include 'navbar.html' %}
-
       <!-- End Navbar -->
       <div class="content">
         <div class="content">
@@ -63,20 +61,7 @@
         </div>
       </div>
       {% include 'footer.html' %}
-      <!-- <div class="ps__rail-x" style="left: 0px; top: 0px">
-        <div
-          class="ps__thumb-x"
-          tabindex="0"
-          style="left: 0px; width: 0px"
-        ></div>
-      </div>
-      <div class="ps__rail-y" style="top: 0px; left: 0px; height: 625px">
-        <div
-          class="ps__thumb-y"
-          tabindex="0"
-          style="top: 0px; height: 220px"
-        ></div> -->
-      <!-- </div> -->
+   
     </div>
 
     <!--   Core JS Files start from here   -->
