--- a/templates/new_door/add_entity.html
+++ b/templates/new_door/add_entity.html
@@ -59,24 +59,18 @@
           </div>
           <label class="col-sm-2 col-form-label">Country*</label>
           <div class="col-sm-4">
-            <div class="form-group bmd-form-group">
-              {{ form.country }}
-            </div>
+            <div class="form-group bmd-form-group">{{ form.country }}</div>
           </div>
         </div>
 
         <div class="row">
           <label class="col-sm-2 col-form-label">Email*</label>
           <div class="col-sm-4">
-            <div class="form-group bmd-form-group">
-             {{ form.email }}
-            </div>
+            <div class="form-group bmd-form-group">{{ form.email }}</div>
           </div>
           <label class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-4">
-            <div class="form-group bmd-form-group">
-             {{ form.desc }}
-            </div>
+            <div class="form-group bmd-form-group">{{ form.desc }}</div>
           </div>
         </div>
 
