Updated the models and the Views

--- a/templates/ContractReq_Type.html
+++ b/templates/ContractReq_Type.html
@@ -1,4 +1,4 @@
-{% extends 'Main_NewDoor.html' %} {% block title %} Contract_Request_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html'' %} {% block title %} Contract_Request_Type {% endblock title %} {% block body %} {% load static %}
 <div class="col-md-12">
     <form id="TypeValidation" class="form-horizontal" action=" " method="post" novalidate="novalidate" enctype="multipart/form-data">
         {% csrf_token %}
