--- a/templates/Update_PayMode_Type.html
+++ b/templates/Update_PayMode_Type.html
@@ -1,43 +1,102 @@
-{% extends 'Main_NewDoor.html' %} {% block body %}
+{% extends 'base.html'' %} {% block body %}
 <div class="col-md-12">
-    <form id="TypeValidation" class="form-horizontal" action=" " method="post" novalidate="novalidate" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="card "><br>
-            <div class="row">
-                <div class="col-sm-8 offset-2">
-                    <h4 class="alert alert-info">Update Payment Mode Type</h4>
-                    <form action="" method="post">
-                        {% csrf_token %}
-                        <div class="card-body ">
-                            <br> {% comment %} Row1 {% endcomment %}
-                            <div class="row">
-                                <label class="col-sm-3 col-form-label" for="PayType">Payment Mode Type*</label>
-                                <div class="col-sm-6">
-                                    <div class="form-group bmd-form-group">
-                                        <input style="background-color: #ffffff; margin-bottom: 30px;" class="form-control" value="{{PAYTYP.PayType}}" type="text" id="PayType" name="PayType" required="true" aria-required="true">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-sm-3 col-form-label" for="desc">Description*</label>
-                                <div class="col-sm-6">
-                                    <div class="form-group bmd-form-group">
-                                        <input style="background-color: #ffffff;" class="form-control" value="{{PAYTYP.desc}}" type="text" id="desc" name="desc" required="true" aria-required="true">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <br>
-                    <div class="modal-footer">
-                    <input type="submit" class="btn btn-success btn-round float-right" value="Update" style="margin-right: 13px; margin-bottom: 20px; margin-top: 20px;">
-                    <a href="{% url 'PayMode_Type'%}" class="btn btn-info btn-round float-right" style="margin-bottom: 20px; margin-top: 20px;"> Close </a>
-                    </div>
-                        {% comment %} <a href="{% url 'Documents_Type'%}" class="btn btn-info btn-round float-right" style="margin-bottom: 30px; margin-top: 30px; margin-right: 280px;"> Back </a>
-                        <input type="submit" class="btn btn-success btn-round float-right" value="Update" style="margin-right: 13px;"> {% endcomment %}
-                    </form>
+  <form
+    id="TypeValidation"
+    class="form-horizontal"
+    action=" "
+    method="post"
+    novalidate="novalidate"
+    enctype="multipart/form-data"
+  >
+    {% csrf_token %}
+    <div class="card">
+      <br />
+      <div class="row">
+        <div class="col-sm-8 offset-2">
+          <h4 class="alert alert-info">Update Payment Mode Type</h4>
+          <form action="" method="post">
+            {% csrf_token %}
+            <div class="card-body">
+              <br />
+              {% comment %} Row1 {% endcomment %}
+              <div class="row">
+                <label class="col-sm-3 col-form-label" for="PayType"
+                  >Payment Mode Type*</label
+                >
+                <div class="col-sm-6">
+                  <div class="form-group bmd-form-group">
+                    <input
+                      style="background-color: #ffffff; margin-bottom: 30px"
+                      class="form-control"
+                      value="{{PAYTYP.PayType}}"
+                      type="text"
+                      id="PayType"
+                      name="PayType"
+                      required="true"
+                      aria-required="true"
+                    />
+                  </div>
                 </div>
+              </div>
+              <div class="row">
+                <label class="col-sm-3 col-form-label" for="desc"
+                  >Description*</label
+                >
+                <div class="col-sm-6">
+                  <div class="form-group bmd-form-group">
+                    <input
+                      style="background-color: #ffffff"
+                      class="form-control"
+                      value="{{PAYTYP.desc}}"
+                      type="text"
+                      id="desc"
+                      name="desc"
+                      required="true"
+                      aria-required="true"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
+            <br />
+            <div class="modal-footer">
+              <input
+                type="submit"
+                class="btn btn-success btn-round float-right"
+                value="Update"
+                style="
+                  margin-right: 13px;
+                  margin-bottom: 20px;
+                  margin-top: 20px;
+                "
+              />
+              <a
+                href="{% url 'PayMode_Type'%}"
+                class="btn btn-info btn-round float-right"
+                style="margin-bottom: 20px; margin-top: 20px"
+              >
+                Close
+              </a>
+            </div>
+            {% comment %}
+            <a
+              href="{% url 'Documents_Type'%}"
+              class="btn btn-info btn-round float-right"
+              style="margin-bottom: 30px; margin-top: 30px; margin-right: 280px"
+            >
+              Back
+            </a>
+            <input
+              type="submit"
+              class="btn btn-success btn-round float-right"
+              value="Update"
+              style="margin-right: 13px"
+            />
+            {% endcomment %}
+          </form>
         </div>
-    </form>
+      </div>
+    </div>
+  </form>
 </div>
 {% endblock body %}
