--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -103,13 +103,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Add_Unit">
+              <a class="nav-link" href="{% url 'add_unit' %}">
                 <span class="sidebar-mini"> RS </span>
                 <span class="sidebar-normal"> Add Unit </span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Unit_Overview">
+              <a class="nav-link" href="{% url 'unit_overview' %}">
                 <span class="sidebar-mini"> UO </span>
                 <span class="sidebar-normal"> Unit Overview </span>
               </a>
@@ -135,19 +135,19 @@
         <div class="collapse" id="formsExamples">
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link" href="/Category_Type">
+              <a class="nav-link" href="{% url 'add_category_type' %}">
                 <span class="sidebar-mini"> CT </span>
                 <span class="sidebar-normal"> Category Type </span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Ownership_Type">
+              <a class="nav-link" href="{% url 'add_ownership_type' %}">
                 <span class="sidebar-mini"> RS </span>
                 <span class="sidebar-normal"> Ownership Type </span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Property_Type">
+              <a class="nav-link" href="{% url 'add_property_type' %}">
                 <span class="sidebar-mini"> PT </span>
                 <span class="sidebar-normal"> Property Type </span>
               </a>
