--- a/templates/Add_Tenant.html
+++ b/templates/Add_Tenant.html
@@ -1,7 +1,5 @@
-{% extends 'base.html'' %} 
-{% load static %} 
-{% block title %} Add Tenant {% endblock title %} 
-{% block body %}
+{% extends 'base.html' %} {% load static %} {% block title %} Add Tenant {%
+endblock title %} {% block body %}
 <div class="col-md-12">
   <form
     id="TypeValidation"
