--- a/templates/Add_User.html
+++ b/templates/Add_User.html
@@ -1,5 +1,5 @@
-{% extends 'base.html'' %} {% block title %} Add_User {% endblock title %} {%
-block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Add_User {% endblock title %} 
+{%block body %} {% load static %}
 <div class="col-md-12">
   <form
     id="TypeValidation"
