--- a/templates/Renewal_Unit.html
+++ b/templates/Renewal_Unit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'' %} {% block title %} Renew_Unit_Contract {% endblock
+{% extends 'base.html' %} {% block title %} Renew_Unit_Contract {% endblock
 title %} {% block body %} {% load static %}
 <div class="col-md-12">
   <form
