--- a/templates/View_Property_Type.html
+++ b/templates/View_Property_Type.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'' %} {% block body %}
+{% extends 'base.html' %} {% block body %}
 <div class="col-md-12">
   <form
     id="TypeValidation"
