--- a/templates/new_door/ownership_type.html
+++ b/templates/new_door/ownership_type.html
@@ -1,30 +1,30 @@
-{% extends 'base.html'' %} {% block title %} Category_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Ownership_Type {% endblock title %} {% block body %} {% load static %}
 <div class="col-md-12">
     <form id="TypeValidation" class="form-horizontal" action=" " method="post" novalidate="novalidate" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="card ">
-            <div class="card-header card-header-rose card-header-text" style="font-size: 20px;">
-                <div class="card-text" style="padding-left: 0px;">
-                    <a href=" {% url 'Category_Type'%} " class="card-header card-header-rose card-header-text ">
-                        <i class="material-icons ">roofing</i> Category Type </a>
+            <div class="card-header card-header-rose card-header-text"  style="font-size: 20px;">
+                <div class="card-text">
+                <a href=" {% url 'add_ownership_type'%} " class="card-header card-header-rose card-header-text ">
+                        <i class="material-icons ">roofing</i> Ownership Type </a>
                 </div>
             </div>
 
             <div class="card-body ">
                 <br> {% comment %} Row1 {% endcomment %}
+                
+                
+                
+                    
                 <div class="row">
-                    <label class="col-sm-2 col-form-label" for="CatType">Category Type*</label>
+                   {% for field in form %}
+                    <label class="col-sm-2 col-form-label" for="OwnershipType">{{ field.label }}*</label>
                     <div class="col-sm-4">
                         <div class="form-group bmd-form-group">
-                            <input class="form-control" type="text" id="CatType" name="CatType" required="true" aria-required="true">
+                            <input class="form-control" type="text" id="{{ field.id }}" name="{{ field.name }}" required="true" aria-required="true">
                         </div>
                     </div>
-                    <label class="col-sm-2 col-form-label" for="desc">Description*</label>
-                    <div class="col-sm-4">
-                        <div class="form-group bmd-form-group">
-                            <input class="form-control" type="text" id="desc" name="desc" required="true" aria-required="true">
-                        </div>
-                    </div>
+                {% endfor %}
                 </div>
                 {% comment %} Row1 end here {% endcomment %}
 
@@ -52,7 +52,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header card-header-primary card-header-icon">
-                            <h4 class="card-title">Category Type Overview</h4>
+                            <h4 class="card-title">Ownership Type Overview</h4>
                         </div>
                         <div class="card-body">
                             <div class="toolbar">
@@ -63,56 +63,37 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Category Type</th>
+                                            <th>Ownership Type</th>
                                             <th>Description</th>
                                             <th class="disabled-sorting text-right">Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% if ADCTTP %} {% for TRT in ADCTTP %}
+                                        {% if ownership_types %} 
+                                        {% for ownership_type in ownership_types %}
                                         <tr>
-                                            <td scope="row">{{TRT.id}}</td>
-                                            <td>{{TRT.CatType}}</td>
-                                            <td>{{TRT.desc}}</td>
+                                            <td scope="row">{{ownership_type.id}}</td>
+                                            <td>{{ownership_type.ownership_type}}</td>
+                                            <td>{{ownership_type.desc}}</td>
                                             <td class="text-right">
 
-                                            
-                                                <a href="{% url 'Viewcategory' TRT.id %} " method="post " class="d-inline " rel="tooltip " title=" " data-original-title="Remove ">{% csrf_token %}
+                                                <a href="" method="post " class="d-inline " rel="tooltip " title=" " data-original-title="Remove ">{% csrf_token %}
                                                 <div class="ripple-container success "></div>
                                                 <i class="material-icons " style="margin-right: 10px; margin-top: 10px; margin-bottom: 20px; color: #ff9800;" >dvr</i>
                                                 </a>
                                               
 
-                                                <a href="{% url 'updatecategory' TRT.id %} " method="post " class="d-inline ">{% csrf_token %}
+                                                <a href=" {% url 'update_ownership_type' ownership_type.pk %}" method="post " class="d-inline ">{% csrf_token %}
                                                     <div class="ripple-container success "></div>
                                                     <i class="material-icons "  style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #4caf50; ">create</i>
                                                 </a>
                                                
 
-                                                <a href="{% url 'deletecategory' TRT.id %} " method="post " class="d-inline ">
-                                                    {% csrf_token %}
+                                                <a href="{% url 'delete_ownership_type' ownership_type.pk %} " class="d-inline ">
+                                                   
                                                     <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
                                                     <div class="ripple-container"></div>
                                                 </a>
-                                                
-
-                                                {% comment %} <a href="{% url 'updatecategory' CT.id %}" class="btn btn-link btn-info btn-just-icon edit" data-toggle="modal" data-target="#myModal" value='Edit'>
-                                                    <div class="ripple-container"></div>
-                                                    <i class="material-icons">dvr</i>
-                                                </a>
-
-                                                <a href="#" class="btn btn-link btn-info btn-just-icon like"><i class="material-icons">favorite</i></a>
-
-
-                                                <a href="{% url 'updatecategory' CT.id %}" method="post" class="d-inline">{% csrf_token %}
-                                                    <div class="ripple-container success"></div>
-                                                    <i class="material-icons">dvr</i>
-                                                </a>
-                                                
-                                                <form action="{% url 'deletecategory' CT.id %}" method="post" class="d-inline">{% csrf_token %}
-                                                    <input type="submit" class="btn btn-danger" value='Delete'>
-                                                </form>
-                                                 {% endcomment %}
                                                 
                                             </td>
                                         </tr>
